2005-12-11  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclvar.c: Untabify and reformat.

	* nsd/tclvar.c:
	* tests/ns_nsv.test: Add -nocomplain switch to nsv_unset command
	to match Tcl unset command.

	* tests/ns_nsv.test: Typo: s/-setup/-body/

	* tests/ns_register_filter.test: Add tests for registered filters
	and traces.
	* nsd/tclrequest.c: Fix bug where filter errors were being logged
	twice. Fix bug where filter callback procs were being constructed
	incorrectly, making it impossible to register inline script
	fragments, rather than proc names.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/filter.c:
	* nsd/tclrequest.c:
	* nsd/proc.c:
	* nsd/tclcmds.c:
	* tests/ns_register_filter.test: Add switch -first to
	ns_register_filter command, allowing filters to be registered at
	the head of the queue.  Add new command ns_shortcut_filter
	which registers a C filter callback which simply returns
	NS_FILTER_BREAK, preventing any other filters of the same type
	from running. For further explanation, see:
	http://sf.net/tracker/index.php?func=detail&aid=1012103&group_id=3152&atid=353152

2005-12-10  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/httptime.c: Untabify and reformat.
	* tests/ns_httptime.test: Add tests for ns_parsehttptime.

	* nsd/httptime.c:
	* tests/hs_httptime.test: Use snprintf to format the date to ensure the
	English week and month names are always used, no matter which
	locale is in effect. (Bug# 1340755)

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/fastpath.c:
	* nsd/tclrequest.c:
	* nsd/tclcmds.c:
	* nsd/server.c:
	* nsd/proc.c:
	* tests/ns_register_proc.test: Add new Tcl command ns_register_fastpath
	which re-register the original fastpath proc for static file serving,
	for the specified method and URL.  This allows e.g. a Tcl proc to
	be registered as the default handler for the URL / and then
	override this with the fastpath proc for /images.  The fastpath
	proc invokes no Tcl and therefore does not allocate an interp.